@@ -1566,36 +1566,37 @@ void spoton_misc::savePublishedNeighbor(const QHostAddress &address,
 	  (countryNameFromIPAddress(address.toString()));
 	bool ok = true;
 
-	query.exec("INSERT INTO neighbors "
-		   "(local_ip_address, "
-		   "local_port, "
-		   "protocol, "
-		   "remote_ip_address, "
-		   "remote_port, "
-		   "scope_id, "
-		   "status_control, "
-		   "hash, "
-		   "sticky, "
-		   "country, "
-		   "remote_ip_address_hash, "
-		   "qt_country_hash, "
-		   "user_defined, "
-		   "proxy_hostname, "
-		   "proxy_password, "
-		   "proxy_port, "
-		   "proxy_type, "
-		   "proxy_username, "
-		   "uuid, "
-		   "echo_mode, "
-		   "ssl_key_size, "
-		   "certificate, "
-		   "account_name, "
-		   "account_password, "
-		   "transport, "
-		   "orientation, "
-		   "ssl_control_string) "
-		   "VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, "
-		   "?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?)");
+	query.prepare
+	  ("INSERT INTO neighbors "
+	   "(local_ip_address, "
+	   "local_port, "
+	   "protocol, "
+	   "remote_ip_address, "
+	   "remote_port, "
+	   "scope_id, "
+	   "status_control, "
+	   "hash, "
+	   "sticky, "
+	   "country, "
+	   "remote_ip_address_hash, "
+	   "qt_country_hash, "
+	   "user_defined, "
+	   "proxy_hostname, "
+	   "proxy_password, "
+	   "proxy_port, "
+	   "proxy_type, "
+	   "proxy_username, "
+	   "uuid, "
+	   "echo_mode, "
+	   "ssl_key_size, "
+	   "certificate, "
+	   "account_name, "
+	   "account_password, "
+	   "transport, "
+	   "orientation, "
+	   "ssl_control_string) "
+	   "VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, "
+	   "?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?)");
 	query.bindValue(0, QVariant(QVariant::String));
 	query.bindValue(1, QVariant(QVariant::String));
 
